# gRPC_CPP_CMake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/: address_request.cpp  client.cpp  client_zone.h  data_chunk_stream_request.cpp  stream_request.cpp  stream_request.h  value_request.cpp
include/: random_function.h
proto/: CMakeLists.txt
proto/myproto/: address.proto  addressbook.proto  big_data.proto  collection.proto  number_data.proto
server/: address_response.h  data_chunk_stream_response.h  server.cpp  stream_response.h  value_response.h
